--- a/DDD.Api/appsettings.json
+++ b/DDD.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DDD.Conn": "Data Source=.;Initial Catalog=DDD.App;Integrated Security=True;Application Name=DDD.App.Db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
