--- a/DDD.Api/Properties/launchSettings.json
+++ b/DDD.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "DDD.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
