--- a/DDD.Api/appsettings.json
+++ b/DDD.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/"
+  },
   "ConnectionStrings": {
     "DDD.Conn": "Data Source=.;Initial Catalog=DDD.App;Integrated Security=True;Application Name=DDD.App.Db;"
   },
